--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,12 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="Megaman Advanced PET in VueJs">
+    <meta name="keywords" content="Megaman, Rockman, PET, Advanced PET, Megaman NT Warrior,ロックマンエグゼ, ロックマン, Megaman Advanced PET">
+    <meta name="author" content="https://github.com/xwellingtonx">
+    <meta name="og:title" property="og:title" content="Megaman Advanced PET">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Advanced PET</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Advanced PET doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
