--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="https://github.com/xwellingtonx">
     <meta name="og:title" property="og:title" content="Megaman Advanced PET">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <script src="DragDropTouch.js"></script>
+    <!-- <script src="DragDropTouch.js"></script> -->
     <title>Advanced PET</title>
   </head>
   <body>
